# parallelstone-manager

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  setup.py  structure  structure.md
consumers/: consumer.py  telegram_sender.py
core/: config.py  dependencies.py
parallelstone_manager/: __init__.py  main.py
parallelstone_manager/consumers/: consumer.py  discord_sender.py  slack_sender.py  telegram_sender.py
parallelstone_manager/core/: __init__.py  config.py  dependencies.py  gamerule.py
parallelstone_manager/models/: players.py  responses.py
parallelstone_manager/routers/: players.py  server.py
parallelstone_manager/services/: rabbitmq.py  rcon.py
routers/: server.py
services/: rabbitmq.py
